# drf-shop-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
drf_shop_api/: abstract_models.py  decorators.py  models.py  tests.py  utils.py
drf_shop_api/customers/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
drf_shop_api/orders/: models.py  serializers.py  tests.py
drf_shop_api/products/: filters.py  models.py  serializers.py  tests.py  urls.py
example/example/: settings.py
example/payments/: models.py
