[tool.poetry]
authors = ["Oleksandr Korol <oleksandr.korol@coaxsoft.com>"]
classifiers = [
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Framework :: Django",
]
description = "Standalone shop app, to handle shop features in your drf project"
name = "drf-shop-api"
packages = [{include = "drf_shop_api"}]
readme = "README.md"
version = "0.0.3"
[project.urls]
Repository = "https://github.com/coaxsoft/drf-shop-api"

[tool.poetry.dependencies]
Django = "^4.2.1"
django-filter = "^23.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
pillow = "^10.0.0"
python = "^3.11"
rest-framework-simplejwt = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mixer = "^7.2.2"
ruff = "^0.0.265"

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = "^7.2.7"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# Ruff settings
[tool.ruff]
ignore = ["RUF005"]
line-length = 120
select = ["E", "F", "W", "I", "C4", "Q", "RUF", "PIE", "COM"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "migrations",
  "dist",
  "venv",
  ".venv",
  ".conf",
  ".data",
  ".env",
  "asgi.py",
]
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"
[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Black settings

[tool.black]
line-length = 120
target-version = ['py310']

[tool.coverage.run]
branch = true
omit = [
  ".venv/*",
  "*/migrations/*",
  "*/admin.py",
  "*/apps.py",
  "manage.py",
  "*/settings.py",
  "*/asgi.py",
  "*/wsgi.py",
  "*/tests.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
